[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/game/ui/HUDManager.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/ui/GUISprite.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/items/axe.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/items/bow.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/Newstuff.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/SpaceMadness.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/textures/player/red_hood_sheet3.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/items/skull-2.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 61.5831, 59.7347, 55.3242, 22.7617 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64.0433, 15.5735, 16.064, 16.7066 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 128.091, 15.7545, 16.2569, 16.1925 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 80.2449, 15.9627, 15.5886, 16.0383 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 128.208, 15.7913, 15.9754, 16.4908 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 80.0272, 15.8024, 15.9355, 16.1925 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 116.915, 31.9912, 20.1764, 20.1764 )

[sub_resource type="DynamicFont" id=16]
size = 5
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=17]
size = 6
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 52.2948, 1389.65, 22.0615, 37.3262 )

[sub_resource type="DynamicFont" id=19]
size = 7
font_data = ExtResource( 7 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="StatsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = -2.0
margin_right = -18.0
margin_bottom = -1.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="StatsContainer"]
margin_left = 16.0
margin_top = 3.0
margin_right = 65.0
margin_bottom = 23.0
custom_styles/panel = SubResource( 11 )

[node name="Panel" type="Sprite" parent="StatsContainer/Panel"]
visible = false
modulate = Color( 0.309804, 0.309804, 0.309804, 0.988235 )
position = Vector2( 51.9818, 11.5 )
scale = Vector2( 1.96364, 1.22727 )
texture = SubResource( 12 )

[node name="HpProgress" type="TextureProgress" parent="StatsContainer/Panel"]
unique_name_in_owner = true
margin_left = 6.0
margin_top = 4.0
margin_right = 22.0
margin_bottom = 20.0
max_value = 5.0
value = 5.0
texture_under = SubResource( 6 )
texture_over = SubResource( 6 )
texture_progress = SubResource( 5 )
fill_mode = 3
tint_progress = Color( 0.847059, 0, 0, 1 )

[node name="StaminaProgress" type="TextureProgress" parent="StatsContainer/Panel"]
unique_name_in_owner = true
margin_left = 24.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 20.0
max_value = 10.0
texture_under = SubResource( 9 )
texture_over = SubResource( 9 )
texture_progress = SubResource( 10 )
fill_mode = 3
tint_progress = Color( 0.968627, 1, 0, 1 )

[node name="ProtectionProgress" type="TextureProgress" parent="StatsContainer/Panel"]
unique_name_in_owner = true
margin_left = 41.0
margin_top = 4.0
margin_right = 56.0
margin_bottom = 20.0
max_value = 10.0
texture_under = SubResource( 14 )
texture_over = SubResource( 14 )
texture_progress = SubResource( 15 )
fill_mode = 3
tint_progress = Color( 0, 0.27451, 1, 1 )

[node name="Weapon" type="Sprite" parent="StatsContainer/Panel"]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
position = Vector2( 67, 12 )
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 13 )

[node name="Bow" type="Sprite" parent="StatsContainer/Panel"]
visible = false
modulate = Color( 0.909804, 0.909804, 0.909804, 1 )
position = Vector2( 67, 12 )
scale = Vector2( 0.0723954, 0.0732422 )
texture = ExtResource( 4 )
flip_h = true

[node name="Axe" type="Sprite" parent="StatsContainer/Panel"]
modulate = Color( 0.890196, 0.890196, 0.890196, 1 )
position = Vector2( 67, 12 )
scale = Vector2( 0.0661526, 0.0652542 )
texture = ExtResource( 3 )
flip_h = true

[node name="Counter" type="Label" parent="StatsContainer/Panel"]
margin_left = 74.0
margin_top = 17.0
margin_right = 77.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 16 )
text = "0
"

[node name="Deaths" type="Label" parent="StatsContainer/Panel"]
margin_left = 19.0
margin_top = 23.0
margin_right = 23.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 17 )
text = "0"

[node name="Player" type="Sprite" parent="StatsContainer/Panel"]
visible = false
position = Vector2( 10, 26 )
scale = Vector2( 0.203334, 0.165347 )
texture = SubResource( 18 )
flip_h = true

[node name="Skull" type="Sprite" parent="StatsContainer/Panel"]
position = Vector2( 14, 26.6774 )
scale = Vector2( 0.0144581, 0.0202055 )
texture = ExtResource( 9 )

[node name="Chances" type="Label" parent="StatsContainer/Panel"]
visible = false
margin_left = 16.0
margin_top = 22.0
margin_right = 21.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 19 )
text = "0"
